Fixing #4082: [IE+Quirks] Preview text in the image dialog is not wrapping.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@5317 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/dialog.css
+++ b/_source/skins/kama/dialog.css
@@ -687,13 +687,16 @@ body .cke_dialog
 
 .cke_skin_kama .cke_dialog  #ImagePreviewBox
 {
-	white-space : normal;
 	border : 2px ridge black;
 	overflow : scroll;
 	height : 160px;
 	width : 230px;
 	padding : 2px;
 	background-color : white;
+}
+
+.cke_skin_kama .cke_dialog #ImagePreviewBox table td {
+	white-space: normal;
 }
 
 /* Fix iframedialog's height doesn't stretch to 100% #4863.*/
